@@ -33,6 +33,6 @@ BEGIN driver vphy
 	OPTION driver_state = ACTIVE;
 	OPTION depends = (video_common);
 	OPTION copyfiles = all;
-	OPTION VERSION = 1.7;
+	OPTION VERSION = 1.8;
 	OPTION NAME = vphy;
 END driver
